--- a/FicherosTFG/02Previos.tex
+++ b/FicherosTFG/02Previos.tex
@@ -12,13 +12,13 @@ donde $\Omega \subset \mathbb{R}^n$, $f$ es una función de valores reales, $c>0$
 \begin{equation}
 	\Delta u = \sum_{j=1}^{N}\frac{\partial^2u}{\partial x^2_j},
 \end{equation}
-es conocido como el laplaciano. En esta ecuación la variable $t$ denota el tiempo transcurrido y las variables $x_i ,\  i=1,...,n$ denotan la posición de la onda en cada dirección del espacio $\mathbb{R}^n$. \\
+es conocido como el laplaciano. En esta ecuación la variable $t$ denota el tiempo transcurrido, $x_i ,\  i=1,...,n$ denotan las variables espaciales en cada dirección de $\mathbb{R}^n$ y $u(x,t)$ será la posición la posición de la onda en cada punto del dominio espacio-temporal. \\
 
-Podemos observar que se trata de una ecuación lineal y, siempre que $f\not\equiv 0$, la ecuación será no homogénea, es decir, tendrá termino independiente.\\
+Podemos observar que se trata de una ecuación lineal y, siempre que $f\not\equiv 0$, la ecuación será no homogénea, es decir, tendrá termino independiente no nulo.\\
 
-\section{Ecuación de onda de segundo orden}
+\section{La ecuación de onda unidimensional}
 
-Ya que habiéndonos situado en la ecuación de onda, a partir de esta sección nos centraremos en la de segundo orden, es decir, una sola dimensión en el espacio. Comenzaremos explicando el modelado de dicha función, apoyándonos en \citep{Camarena2004LaTD, MartinDomingo}.
+Ya que habiéndonos situado en la ecuación de onda, a partir de esta sección nos centraremos en el caso unidimensional, es decir en el que dominio  $\Omega\subset\mathbb{R}$. Comenzaremos explicando el modelado de dicho fenómeno, apoyándonos en \citep{Camarena2004LaTD, MartinDomingo}.
 
 Supongamos que tenemos una cuerda uniforme y tensa, sujeta por los extremos, tal como lo estaría, por ejemplo, en una guitarra. Esta cuerda estaría colocada en nuestro esquema en el eje $X$ entre $0$ y $L$, siendo $L$ el largo de la misma. Así vemos que cada punto de la cuerda se desplazará en el tiempo.
 Por lo tanto, la función que describa el movimiento de la cuerda será del tipo $u(x,t)$.\\
@@ -28,7 +28,7 @@ Nuestra cuerda en un instante $t$ podría tener una forma parecida a alguna de la
 \includegraphics[scale=0.45]{Ejemplo1.png}
 \includegraphics[scale=0.45]{Ejemplo2.png}\\
 
-Supongamos que la cuerda no está en reposo, habrá una fuerza tensora $T$, producidas por los puntos en los que está sujeta. Nos apoyaremos en la siguiente figura para ver como se describiría la ecuación: 
+Supongamos que la cuerda no está en reposo, habrá una fuerza tensora $T$, producida por los puntos en los que está sujeta. Nos apoyaremos en la siguiente figura para ver como se describiría la ecuación: 
 \newpage
 
 \begin{figure}[!ht]
@@ -39,7 +39,7 @@ Supongamos que la cuerda no está en reposo, habrá una fuerza tensora $T$, produc
 
 Elegido un segmento diferencial del arco de la cuerda $\Delta S$, nos damos cuenta de que la cuerda se habrá desplazado perpendicularmente una cantidad $u$. Por lo tanto la fuerza tensora que produce cada punto en el que está fijado, no tendrán la misma dirección y sentido opuesto, sino que tendrán componente vertical.  Las componentes verticales son:
 
-$$T_y= -\mathbb{F_T}sen(\alpha), $$
+$$T_y= -F_Tsen(\alpha), $$
 $$T'_y= F_Tsen(\beta).$$
 
 Luego la fuerza vertical quedaría $F=F_T(sen(\beta)-sen(\alpha))$, donde $F_T$ es la fuerza generada por la tensión, por otro lado, al encontrarnos en una sección diferencial los ángulos son tan pequeños que podemos decir $sen(\alpha) \approxeq tan(\alpha)$ y $sen(\beta) \approxeq tan(\beta)$ quedando
@@ -54,10 +54,10 @@ $$u_{tt}(x,t)=\frac{F_T}{\rho_l}\frac{u_x(x+\Delta x,t)-u_x(x,t)}{\Delta x}.$$
 
 Tomando limite cuando $\Delta x\rightarrow 0$ y $c^2=\frac{F_T}{\rho_l}$ la ecuación queda de la siguiente forma:
 \begin{equation}\label{eq:basica}
-	u_{tt}=c^2u_{xx},\quad (0,l) \times[0,T).
+	u_{tt}=c^2u_{xx},\quad (0,L) \times[0,T).
 \end{equation}
 
-En este caso podemos tomamos el dominio como $\Omega^1\subset \mathbb{R}$, donde $T$ es un parámetro dado que representa el instante final de la observación. Añadiendo las condiciones de frontera y contorno mas usadas, para más información sobre el tema \citep{Ganzha}, nuestro esquema nos queda. 
+En este caso podemos tomamos el dominio como $\Omega \mathbb{R}$, donde $T$ es un parámetro dado que representa el instante final de la observación. Añadiendo las condiciones de contorno usuales (valores conocidos de la solución sobre la fontera del dominio, $x=0$ y $x=L$), para más información ver \citep{Ganzha}, obtendremos el siguiente modelo. 
 
 \begin{equation}\label{ecuaciononda}
 	\begin{array}{lc}   
@@ -76,19 +76,21 @@ En este caso podemos tomamos el dominio como $\Omega^1\subset \mathbb{R}$, donde
 \end{equation} 
 \begin{equation}\label{eq:frontera3}
 	\begin{array}{lc}   
-		u(0,t)=u(l,t)=0, &  t\in(0,T).
+		u(0,t)=u(L,t)=0, &  t\in(0,T).
 	\end{array}
 \end{equation} 
 
- Estas última condición, \eqref{eq:frontera3}, se llaman de tipo Dirichlet homogenea.
+ Estas última condiciones de contorno, \eqref{eq:frontera3}, se llaman de tipo Dirichlet homogéneas. En lo que sigue, supondremos que $f$ y $g$ son funciones suficientemente regulares para que el problema anterior esté bien planteado y tenga solución, es decir, exista una función $u$ dos veces derivable con respecto a t y x que verifica \eqref{ecuaciononda} a \eqref{eq:frontera3}.\\
+ 
+ La solución de este esquema será única, la demostración de la unicidad se puede encontrar en \citep{amara}.
 
 
 
 
 \section{Clasificación de la ecuación de onda}
-En esta sección clasificaremos la EDP, estas se clasifican en: elípticas, hiperbólicas y parabólicas. Para poder realizar la clasificación primero tendremos que estandarizarla. Aunque las ecuaciones se pueden clasificar y estandarizar siempre, nosotros por simplicidad lo haremos solo para las de segundo orden.
+En esta sección clasificaremos las EDP lineales, estas se clasifican en: elípticas, hiperbólicas y parabólicas. Para poder realizar la clasificación primero tendremos que estandarizarla. Aunque las ecuaciones se pueden clasificar y estandarizar siempre, nosotros por simplicidad lo haremos solo para las de segundo orden.
 
-Una ecuación de segundo orden en forma estándar sería como sigue:
+Una ecuación lineal de segundo orden en forma estándar sería como sigue:
 \begin{equation}\label{eq:estandarizacion}
 	Au_{tt}+Bu_{tx}+Cu_{xx}+Du_{t}+Eu_{x}+Fu= G,
 \end{equation}
@@ -106,7 +108,7 @@ Clasificaremos \eqref{eq:estandarizacion} dependiendo de  las ecuaciones caracte
 	\end{itemize}
 \end{definicion}
 
-Vemos que siguiendo la notación de  \eqref{eq:basica}, $A=1, C=-c^2, G=f$ y cada una de las demás funciones es 0. Ahora tenemos $B^2-4AC=4c^2>0$ y por lo tanto nuestra ecuación es hiperbólica.\\
+Vemos que siguiendo la notación de  \eqref{eq:basica}, $A=1, C=-c^2, G=f$ y cada una de las demás funciones es 0. En el caso de la ecuación de onda, tenemos $B^2-4AC=4c^2>0$ y por lo tanto nuestra ecuación es hiperbólica.\\
 Este tipo de clasificación de las ecuaciones la usaremos para separar los distinto métodos numéricos que se pueden usar, ya que estos suelen diferir dependiendo de la misma.
 
 
@@ -115,7 +117,7 @@ Este tipo de clasificación de las ecuaciones la usaremos para separar los distin
 
 \section{Soluciones de tipo onda viajera}
 \label{sec:Ecuaciontransporte}
-Una vez definida nuestra ecuación de onda, es interesante ver que esta admite dos soluciones de tipo onda viajera uno de los dos sentidos del eje $X$. Para ello comenzaremos suponiendo que la solución $u(x,t)$ se puede descomponer en dos funciones de propagación, donde $c$ sabemos que es la velocidad de la onda,
+Una vez definida nuestra ecuación de onda, es interesante ver que esta admite dos soluciones de tipo onda viajera para cada uno de los dos sentidos del eje $X$. Para ello comenzaremos suponiendo que la solución $u(x,t)$ se puede descomponer en dos funciones de propagación, donde $c$ sabemos que es la velocidad de la onda,
 
 \begin{equation}\label{eq:propagacion}
 	u(x,t)=p_+(x-ct)+p_-(x+ct),
@@ -135,7 +137,7 @@ derivando \eqref{eq:fsustituidop} en $x$,
 Ahora queremos sustituir el valor de $u_t(x,0)$ en la condición \eqref{eq:frontera2}, para ello derivemos antes \eqref{eq:propagacion} respecto a $t$,
 
 \begin{equation}\label{eq:derivadasp}
-	u_t=\frac{\partial}{\partial t}(p_+(x-ct)+p_-(x-ct))=cp_+'(x+ct)-cp_-'(x-ct),
+	u_t=\frac{\partial}{\partial t}(p_+(x-ct)+p_-(x+ct))=cp_+'(x-ct)-cp_-'(x+ct),
 \end{equation}
 entonces,
 \begin{equation}\label{eq:gsustituidop}
@@ -157,16 +159,17 @@ $$p_-'(x)= \frac{1}{2}f'(x) + \frac{1}{2c}g(x),\quad \textbf{y}\quad p_+'(x)= \f
 
 Como todo este proceso podría hacerse para todo $x\in \mathbb{R}$, integrando respecto a $x$ y sustituyéndolo por $x+ct$ y $x-ct$, respectivamente, obtendremos las representaciones siguientes de $p_-$ y $p_+$.
 \begin{equation}\label{repp-}
-	p_-(x+ct)=\frac{1}{2}f(x+ct) + \frac{1}{2c}\int_{0}^{x+ct}g(s)\partial s +A,
+	p_-(x+ct)=\frac{1}{2}f(x+ct) + \frac{1}{2c}\int_{0}^{x+ct}g(s) ds +A,
 \end{equation}
 \begin{equation}\label{repp+}
-	p_+(x+ct)=\frac{1}{2}f(x-ct) - \frac{1}{2c}\int_{0}^{x-ct}g(s)\partial s +B,
+	p_+(x+ct)=\frac{1}{2}f(x-ct) - \frac{1}{2c}\int_{0}^{x-ct}g(s) ds +B,
 \end{equation}
-donde $A,B$ son constantes que tomaremos como 0 al saber que $A+B=$ gracias a \ref{eq:propagacion}. Nuestras integrales comienzan en $0$ por el dominio de \ref{ecuaciononda}.\\
+donde $A,B$ son constantes que tomaremos como 0 al saber que $A+B=0$ gracias a \eqref{eq:propagacion}. Nuestras integrales comienzan en $0$ por el dominio de \eqref{ecuaciononda}.\\
 
-Finalmente llegamos. a que  la solución del problema de valores iniciales, será:
+Finalmente llegamos. a que  la solución del problema de contorno, será:
 \begin{equation*}
-	u(x,t)= \frac{1}{2}\left(f'(x+ct)+f'(x-ct)\right) + \frac{1}{2c}\int_{x-ct}^{x+ct}g(s)\partial s. 
+	u(x,t)= \frac{1}{2}\left(f(x+ct)+f(x-ct)\right) + \frac{1}{2c}\int_{x-ct}^{x+ct}g(s)
+	ds. 
 \end{equation*}
 
 
@@ -174,97 +177,65 @@ Finalmente llegamos. a que  la solución del problema de valores iniciales, será:
 \section{La energía en la ecuación de onda}
 \label{sec:energiaondas}
 
-En esta sección nos centraremos en analizar la ley de energía en la ecuación de onda. Llamemos $S=(0,L)$. Para poder obtener el la energía de la ecuación haremos el producto interior \ref{Inner} de la misma con $u_t$:
+En esta sección nos centraremos en analizar la ley de energía en la ecuación de onda. Para poder obtener el la energía de la ecuación haremos para todo $t\in [0,T]$ el producto interior \ref{Inner} de la misma con $u_t$:
 
 \begin{equation*}
-	\left<u_t(\cdot,t),u_{tt}(\cdot,t)\right>_S = c^2\left<u_{t}(\cdot,t),u_{xx}(\cdot,t)\right>_S.
+	\left<u_t(\cdot,t),u_{tt}(\cdot,t)\right>_{L^2(\Omega)} = c^2\left<u_{t}(\cdot,t),u_{xx}(\cdot,t)\right>_{L^2(\Omega)}.
 \end{equation*} 
 
 Para facilitar el entendimiento de la sección simplificaremos la notación de la siguiente forma:
 \begin{equation}\label{ondaut}
-	\left<u_t,u_{tt}\right>_S = c^2\left<u_{t},u_{xx}\right>_S.
+	\left<u_t,u_{tt}\right>_{L^2(\Omega)} = c^2\left<u_{t},u_{xx}\right>_{L^2(\Omega)}.
 \end{equation} 
 
-Sabiendo que siempre estaremos fijando el instante t. Cada uno de los términos de la energía tendremos que ponerlo de la forma $\frac{\partial}{\partial t}\left(\cdot\right)$, comenzaremos por el termino de la izquierda. Para desarrollarlo necesitaremos la siguiente igualdad, derivada de la integración por partes,
+Cada uno de los términos de la energía tendremos que ponerlo de la forma $\frac{\partial}{\partial t}\left(\cdot\right)$, comenzaremos por el termino de la derecha. Para desarrollarlo necesitaremos la siguiente igualdad, derivada de la integración por partes,
 
 \begin{equation}\label{eq:intpartes}
-	\left<u_{t},u_{tt}\right>_S= \int_S u_tu_{tt} \partial x = \left.u_tu_t\right|_S- \int_S u_{tt}u_{t} \partial x = \left.u_tu_t\right|_S- \left<u_{tt},u_{t}\right>_S .
+	\left<u_{t},u_{tt}\right>_{L^2(\Omega)}= \int_0^L u_tu_{xx}  dx = \left.u_tu_x\right|_0^L- \int_0^L u_{tx}u_{x} dx .
 \end{equation}
 
-Por otro lado necesitaremos ver como se puede descomponer $\frac{\partial}{\partial t}||u_t||_S^2$, utilizando la definición de norma \ref{Inner},
+Introduciendolo, en la ecuación \eqref{ondaut},
 
-\begin{equation*}
-	\frac{\partial}{\partial t}||u_t||_S^2 = \frac{\partial}{\partial t}\int_S u_tu_t \partial x. 
-\end{equation*}
-
-Ya que, $\frac{\partial}{\partial t}$ independiente de $x$, y suponiendo que se dan en $u$ y en $u_t$ condiciones de continuidad adecuadas, podremos permutar de sitio la integral y la derivada, y por tanto,
-\begin{equation*}
-	\frac{\partial}{\partial t}||u_t||_S^2 = \int_S \frac{\partial}{\partial t} u_t u_t \partial x, 
-\end{equation*}
-derivando, usando la regla de la cadena, y separando en dos integrales obtenemos la igualdad
-
-\begin{equation}\label{eq:normau}
+\begin{equation}\label{eq:sutituyendo}
 	\begin{split}
-		\frac{\partial}{\partial t}||u_t||_S^2 &= \int_S u_{tt} u_{t}+u_{t} u_{tt} \partial x\\
-		&=\int_S u_{tt} u_{t}\partial x +\int_S u_{t} u_{tt} \partial x\\
-		&=\left<u_{tt},u_{t}\right>_S+\left<u_{t},u_{tt}\right>_S.
+		0&=\left<u_t,u_{tt}\right>_{L^2(\Omega)} -c^2\left<u_{t},u_{xx}\right>_{L^2(\Omega)}\\
+		&=\int_0^L u_{tt}u_{t} dx - c^2\left(\left.u_tu_x\right|_0^L- \int_0^L u_{tx}u_{x} dx\right)\\
+		&=\int_0^L u_{tt}u_{t} dx + c^2\left(\int_0^L u_{tx}u_{x} dx-\left.u_tu_x\right|_0^L\right)
 	\end{split}
-\end{equation}
-
-Continuando ahora desde nuestro factor inicial $\left<u_{t},u_{tt}\right>_S$, usando la igualdad \eqref{eq:normau},
-
-\begin{equation*}
-	\left<u_{t},u_{tt}\right>_S=\int_S u_{t}u_{tt}\partial x=\frac{\partial}{\partial t}||u_t||_S^2 -\int_S u_{tt}u_{t}\partial x.
-\end{equation*}
-
-Utilizando \eqref{eq:intpartes} en el último sumando,
-
-\begin{equation*}
-	\left<u_{t},u_{tt}\right>_S=\frac{\partial}{\partial t}||u_t||_S^2 -\left(\left.u_tu_t\right|_S-\int_S u_{t}u_{tt}\partial x  \right).
-\end{equation*}
-
-Agrupando los términos tendremos,
-\begin{equation*}
-	2\left<u_{t},u_{tt}\right>_S= \frac{\partial}{\partial t}||u_t||_S^2 - \left.u_tu_t\right|_S,
-\end{equation*}
-\begin{equation}\label{eq:primerfactor}
-	\left<u_{t},u_{tt}\right>_S=\frac{1}{2} \frac{\partial}{\partial t}||u_t||_S^2 -\frac{1}{2} \left.u_tu_t\right|_S.
-\end{equation}
-
-
-
-Ahora nos centraremos en el termino de la derecha, comenzamos utilizando la igualdad \eqref{eq:intpartes}, y pasamos el producto interior hacia la izquierda en \eqref{ondaut}, quedando,
-\begin{equation}\label{ondau_t2}
-	\left<u_t,u_{tt}\right>_S  -c^2\left<u_{tx},u_{x}\right>_S = \left.u_tu_x\right|_S
 \end{equation} 
 
-Siguiendo con el análisis de  $\left<u_{tx},u_{x}\right>_S$, análogamente a como lo hicimos con $\left<u_t,u_{tt}\right>_S$, obtendremos 
+El termino $\left.u_tu_x\right|_0^L$ se anula para nuestro esquema, gracias a la condición \eqref{eq:frontera3}. Esto es:
+ $$u(0,t)=u(L,t)=0, \text{para} t\in(0,T).$$
+ 
+ Por lo tanto derivando en t,
+ $$u_t(0,t)=u_t(L,t)=0, \text{para }t\in(0,T).$$
+ 
+ Luego,
+$$\left.u_tu_x\right|_0^L= u_t(\cdot,L)u_x(\cdot,L) - u_t(\cdot,0)u_x(\cdot,0)=0 $$
 
-\begin{equation}\label{eq:segundofactor}
-	\left<u_{tx},u_{x}\right>_S=\frac{1}{2}\frac{\partial}{\partial t}\int_{\mathbb{R}}u_{x}u_{x} \partial x -\frac{1}{2} \left.u_xu_x\right|_S=\frac{1}{2} \frac{\partial }{\partial t}||u_{x}||^2 -\frac{1}{2} \left.u_xu_x\right|_S.
-\end{equation}
-
-Introduciendo \eqref{eq:primerfactor} y \eqref{eq:segundofactor} en la ecuación \eqref{ondau_t2} queda:
-
-$$\frac{\partial}{\partial t}\left( \frac{1}{2}||u_t||^2+\frac{c^2}{2}||u_x||^2\right)= c^2\left.u_tu_x\right|_S-\frac{c^2}{2} \left.u_xu_x\right|_S -\frac{1}{2} \left.u_tu_t\right|_S .$$
-
-
-Definiremos $\mathfrak{B}\triangleq  c^2\left.u_tu_x\right|_S+\frac{c^2}{2} \left.u_xu_x\right|_S +\frac{1}{2} \left.u_tu_t\right|_S $.\\
-Ahora podremos separar en energía cinética $K= \frac{1}{2}||u_t||^2$ y la energía potencial $P = \frac{c^2}{2}||u_x||^2 $ de donde se sigue que la energía total será
-$$\mathfrak{H}= K+ P= \frac{1}{2}||u_t||^2 +\frac{\mu^2}{2}||u_x||^2 .$$
-
-Por otro lado, tenemos que $\frac{\partial}{\partial t}\mathfrak{H}=\mathfrak{B}$, para que se diese conservación de la energía tendrá que ser $\mathfrak{B}=0$. Desarrollandolo,
+Continuando con \eqref{eq:sutituyendo}, utilizando la regla de la cadena obtenemos:
 
 \begin{equation*}
 	\begin{split}
-		0=\mathfrak{B}&=c^2(u_t(l,t)u_x(l,t)-u_t(0,t)u_x(0,t))+\frac{c^2}{2} \left(u_x(l,t)u_x(l,t)-u_x(0,t)u_x(0,t)\right)\\
-		& +\frac{1}{2} \left(u_t(l,t)u_t(l,t)-u_t(0,t)u_t(0,t)\right).
+		0&=\int_0^L u_{t}u_{tt} dx + c^2\int_0^L u_{x}u_{tx} dx\\
+		&=\int_0^L\frac{1}{2}\frac{\partial}{\partial t}u_{t}^2 dx +c^2 \int_0^L\frac{1}{2}\frac{\partial}{\partial t}u_{x}^2 dx\\
+		&= \frac{1}{2}\frac{\partial}{\partial t}\int_0^Lu_{t}^2 dx +c^2 \frac{1}{2}\frac{\partial}{\partial t}\int_0^L u_{x}^2 dx\\
+		&=\frac{\partial}{\partial t}\left( \frac{1}{2}||u_t||_{L^2(\Omega)}^2+\frac{c^2}{2}||u_x||_{L^2(\Omega)}^2\right)
 	\end{split}
-\end{equation*}
+\end{equation*} 
 
+Definiendo de la siguiente forma,
 
-Vemos que esto nos impone ciertas restricciones a nuestra ecuación, estas se traducirán a condiciones de contorno en nuestro esquema.
+$$E(u)=\frac{1}{2}||u_t||_{L^2(\Omega)}^2+\frac{c^2}{2}||u_x||_{L^2(\Omega)}^2,$$
+donde $E$ es la energía, que depende de la solución $u$, vemos que,
 
+$$\frac{\partial}{\partial t}=0.$$ 
+
+Por lo tanto para nuestro esquema se da la ley de la conservación de la energía.\\
+
+Cabe recalcar que si en lugar de las condiciones de tipo Dirichlet impuestas en \eqref{eq:frontera3} se diesen unas condiciones de tipo Neumann homogéneas en dichos puntos, es decir 
+$$u_x(0,t)=u_x(L,t)=0, \text{para }t\in(0,T),$$
+tambien se cumpliría dicha afirmación.\\
 
 
 
