--- a/FicherosTFG/bibliografia.bib
+++ b/FicherosTFG/bibliografia.bib
@@ -12,10 +12,10 @@ abstract = {Digital sound synthesis has long been approached using standard digi
 @book{Software,
 author={Nakamura,Shoichiro},
 year={1992},
-title={Métodos numéricos aplicados con software},
+title={Métodos num{\'e}ricos aplicados con software},
 publisher={Prentice-Hall Hispanoamericana},
-address={México [etc.]},
-keywords={Análisis numérico; Proceso de datos},ç
+address={M{\'e}xico},
+keywords={An{\'a}lisis num{\'e}rico; Proceso de datos},
 isbn={9688802255;9789688802250;},
 language={Spanish},
 }
@@ -208,6 +208,17 @@ author = {E.W. Chen and Q. Luo and N.S. Ferguson and Y.M. Lu},
 keywords = {Travelling string, Boundary condition, Propagating wave, Finite length, d’Alembert method, Mechanical energy},
 abstract = {This paper considers the analytical free time domain response and energy in an axially translating and laterally vibrating string. The domain of the string is either a constant or variable length, dependent upon the general initial conditions. The translating tensioned strings possess either fixed-fixed or fixed-free boundaries. An alternative analytical solution using a reflected wave superposition method is presented for a finite translating string. Firstly, the cycles of vibration for both constant and variable length strings are provided, which for the latter are dependent upon the variable string length. Each cycle is divided into three time intervals according to the magnitude and the direction of the translating string velocity. Applying d’Alembert's method combined with the reflection properties, expressions for the reflected waves at the two boundaries are obtained. Subsequently, superposition of all of the incident and reflected waves provides results for the free vibration of the string over the three time intervals. The variation in the total mechanical energy of the string system is also shown. The accuracy and efficiency of the proposed method are confirmed numerically by comparison to simulations produced using a Newmark-Beta method solution and an existing state space function representation of the string dynamics.}
 }
+
+@book{amara,
+  title={An Elementary Course in Partial Differential Equations},
+  author={Amaranath, T.},
+  isbn={9780763762445},
+  lccn={2008041023},
+  url={https://books.google.es/books?id=uP\_KJzi3aPEC},
+  year={2009},
+  publisher={Jones \& Bartlett Learning}
+}
+
 
 @comment{jabref-meta: selector_publisher:}
 
