--- a/FicherosTFG/00introduccion.tex
+++ b/FicherosTFG/00introduccion.tex
@@ -2,22 +2,22 @@
 \chapter{Introducción}
 \label{cha:Introduction}
 
-Los avances a pasos agigantados de la computación y la tecnología de los últimos años, han logrado que matemáticas, y en particular en el campo de las ecuaciones diferenciales, hayan dado un vuelco.\\
+Los grandes avances en la computación y la tecnología en los últimos años, han logrado que las matemáticas, y en particular el campo de las ecuaciones diferenciales, hayan cambiado notablemente.\\
 
-En situaciones, en las que anteriormente teníamos que desistir o conformarnos con soluciones parciales o en marcos específicos ahora podemos hacer uso de los métodos numéricos para conseguir una aproximación a la realidad cada vez más exacta.\\
+En la actualidad, los métodos numéricos nos brindan la oportunidad de obtener aproximaciones cada vez más precisas de la realidad en situaciones en las que antes teníamos que conformarnos con soluciones parciales o marcos muy específicos.\\
 
-En este trabajo utilizaremos estás técnicas, para observar la resolución de las ecuaciones en derivadas parciales de onda. \\
+A lo largo del trabajo, utilizaremos estás técnicas para observar la resolución de la ecuación de onda en derivadas parciales. \\
 
-La belleza de obtener numéricamente estas soluciones es que podremos manejarlas para obtener, gráficas, y distintos tipos de archivos, cada vez más exactos conforme la potencia de los dispositivos va mejorando.\\
+La belleza de obtener numéricamente estas soluciones, es que, conforme la potencia de los dispositivos va incrementando, las gráficas y distintos tipos de archivos que podemos crear a partir de las mismas, mejorará de forma significativa.\\
 
 Nosotros nos centraremos en dar una visión general de la resolución de la ecuación de onda, en el capítulo \ref{cha:preliminares} nos adentraremos en los conceptos previos necesarios para la comprensión del trabajo, como los Espacios de Lebesgue, el concepto de producto interior, o el mallado que utilizaremos para definir nuestro esquema numérico.\\
 
-En el capítulo siguiente, \ref{cha:Comenzamos}, introduciremos la ecuación de onda desde un marco físico y realizaremos una clasificación de la misma. Posteriormente nos centraremos en un tipo concreto de soluciones, llamadas de onda viajera. Por último, analizaremos la energía de la ecuación y veremos en que condiciones se cumplirá la Ley de la conservación de la energía. \\
+En el capítulo siguiente, \ref{cha:Comenzamos}, introduciremos la ecuación de onda desde un marco físico y realizaremos una clasificación de la misma. Posteriormente nos centraremos en las soluciones de tipo onda viajera. Por último, analizaremos la energía de la ecuación y veremos en qué condiciones se cumplirá la Ley de la conservación de la energía. \\
 
 Una vez tenemos todos los cimientos construidos, en el capítulo \ref{cha:Comparativa}, haremos uso de uno de los métodos más utilizados para la resolución numérica, el método de las diferencias finitas. Continuando el capítulo, analizaremos la consistencia y estabilidad de las soluciones obtenidas. Acabaremos trasladando tanto las soluciones de tipo onda viajera como la conservación de la energía al ámbito discreto.\\
 
 
-Concluiremos el grueso del trabajo llevando todos los avances hechos  teóricamente a la practica. Esto lo realizaremos mediante el script de Python, este se puede encontrar en el Anexo \ref{cha:Anexo} y en el Github del trabajo, . En el capítulo \ref{cha:Comparativa}, comparamos las soluciones obtenidas, en varios sentidos, desde cambiando las condiciones iniciales del sistema, hasta varios de las condiciones obtenidas en los capítulos anteriores.\\
+Concluiremos el grueso del trabajo, llevando a la práctica la teoría de los capítulos anteriores mediante un script de Python. Este se puede encontrar en el Anexo \ref{cha:Anexo} y en el Github del trabajo  \href{https://github.com/Anain-27/Simulacion-numerica-de-ecuaciones-de-onda}{\textbf{Simulación numérica de ecuaciones de onda}}. En el capítulo \ref{cha:Comparativa}, comparamos las soluciones obtenidas en varios sentidos, desde cambiando las condiciones iniciales del sistema, hasta variar las variables obtenidas en los capítulos anteriores.\\
 
 
 Como cierre, en el apartado de conclusiones \ref{Conclusiones}, sintetizaremos los hallazgos obtenidos y presentaremos sugerencias para seguir explorando en esta área de estudio.
