--- a/FicherosTFG/abstract.tex
+++ b/FicherosTFG/abstract.tex
@@ -2,16 +2,12 @@
 
 \begin{abstracts}
 
-In this work we will adress the study of the partial differential equation for wave phenomena, from a numerical perspective.\\
-
-We will establish a theoretical physics foundation to understand the origin of the wave equation and its derivation.\\
+In this work we will address the study of the partial differential equation for wave phenomena, from a numerical perspective.We will establish a theoretical physics foundation to understand the origin of the wave equation and its derivation.\\
 
 
-To proceed further, we are going to tackle the conservation Law of the wave equation and the traveling wave type solutions.\\
+To proceed further, we are going to tackle the conservation law of the wave equation and the traveling wave type solutions.\\
 
-Afterwards, using the finite diferences method, we aim to obtain a numerical solution, by doing a discretizacion in space and time to aproximate it. We will reintroduce the former aspects back from this perspective.\\
-
-We will also be conducting an acoustic and grafical comparative, variying the parameters and conditions discussed in the previous chapters to verify their effects on it.\\
+Afterwards, using the finite diferences method, we aim to obtain a numerical solution, by doing a discretizacion in space and time to aproximate it. We will reintroduce the former aspects back from this perspective. We will also be conducting an acoustic and graphical comparative, varying the parameters and conditions obtained to verify their effects on it.\\
 
 
 To sum up, we are going to present the remarks obtained throughout the work, and the relevant results.
