--- a/FicherosTFG/agradecimientos.tex
+++ b/FicherosTFG/agradecimientos.tex
@@ -8,7 +8,7 @@ Por todo esto quiero agradecerles a ellos y sobre todo a mi compañera y amiga Ma
 Creo que todos tenemos que agradecer a nuestros profesores de la carrera, por intentar que aprendamos y seamos críticos. Sobre todo a mis directores de este trabajo por su paciencia infinita y su ayuda en todo momento.\\
 
 
-También debo agradecer a mis padres, por creer siempre en mi y escucharme cada día, aún cuando ellos no comprendían lo que les contaba. Gracias, por construirme cómo persona y hacerme llegar a donde estoy.\\
+También debo agradecer a mis padres, por creer siempre en mi y escucharme cada día, aún cuando ellos no comprendían lo que les contaba. Gracias, por construirme como persona y hacerme llegar a donde estoy.\\
 
 Por último quiero agradecer a mi novio, porque estos últimos años, tan duros a la par que gratificantes, ha sabido llenarme de confianza.\\
 
